syntax = "proto3";

package email;

service Email {
	rpc SendEmail(SendEmailRequest) returns (SendEmailResponse) {}
}

message SendEmailRequest {
	string To = 1;
	string Subject = 2;
	string Body = 3;
}

message SendEmailResponse {
}
